--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -112,7 +112,8 @@ block = "backlight"
 minimum = 0
 maximum = 100
 step_width = 1
-cycle = [62, 6]
+# cycle = [62, 6]
+cycle = [20, 6]
 invert_icons = true
 
 # https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#net
