--- a/X1Nano1340_gen13.home/dotconfig/sway/config
+++ b/X1Nano1340_gen13.home/dotconfig/sway/config
@@ -70,7 +70,7 @@ output eDP-1 scale 1
 
 # https://github.com/swaywm/sway/issues/5499
 # https://wiki.archlinux.org/title/sway#Change_cursor_theme_and_size
-# seat seat0 xcursor_theme default 96
+seat seat0 xcursor_theme Adwaita 96
 #  ^ STILL DOESN'T INCREASE CURSOR SIZE
 
 ### Input configuration
