--- a/X1Nano1340_gen13.home/dotconfig/sway/config
+++ b/X1Nano1340_gen13.home/dotconfig/sway/config
@@ -71,7 +71,7 @@ output eDP-1 scale 1
 # https://github.com/swaywm/sway/issues/5499
 # https://wiki.archlinux.org/title/sway#Change_cursor_theme_and_size
 seat seat0 xcursor_theme Adwaita 96
-#  ^ STILL DOESN'T INCREASE CURSOR SIZE
+# `ls -l /run/current-system/sw/share/icons/` should show Adwaita as long as the "adwaita-icon-theme" package is installed in `environment.systemPackages`
 
 ### Input configuration
 #
@@ -177,32 +177,30 @@ bindsym XF86Favorites exec 'wpctl set-volume @DEFAULT_AUDIO_SINK@ 100%'
 # NOTE: https://old.reddit.com/r/swaywm/comments/15460e5/should_i_use_amixer_or_pactl_to_control_the/
 
 # Brightness
-# `light -G` shows 0.005156 turns off the screen, whereas 0.005157 has it at basically the lowest brightness
-# Can't use `light -U` by itself, we could potentially try `light -N 0.005157` but this is simpler for now
-# bindsym XF86MonBrightnessUp exec light -U 10
-# bindsym XF86MonBrightnessDown exec light -S 0.0664
-bindsym XF86MonBrightnessDown exec light -S 0.25
-# It seems 0.0664 and 0.005157 have no discernable difference on the LEDs themselves
-# bindsym XF86MonBrightnessDown exec light -S 0.005157
+# `light -G` shows 0.0 when the screen is off
+# `light -G` shows 0.25 at the minimum visible brightness
 
+# bindsym XF86Display exec light -S 0
+# bindsym XF86MonBrightnessDown exec light -S 0.25
+# bindsym XF86MonBrightnessUp exec light -T 2
 # bindsym XF86MonBrightnessUp exec light -A 50
-# bindsym XF86MonBrightnessUp exec light -T 1.5
-
 # Put us at roughly 37% on first press, and 100% at second press
 # This _feels_ like half of the brightness of the next
 # bindsym XF86MonBrightnessUp exec 'light -A 15; light -T 2.5'
-
 # This gives 12%, 40%, 100%
 # bindsym XF86MonBrightnessUp exec 'light -A 5; light -T 2.33'
 
-bindsym XF86MonBrightnessUp exec light -T 2
 
-bindsym XF86Display exec light -S 0
+bindsym XF86Display exec '(test $(light -G) = 0.25 && light -S 0) || (test $(light -G) = 0.50 && light -S 0.25 || light -S 0.5)'
+# The `XF86Display → XF86MonBrightnessUp` combination provides `light -S 2.0`
+# The `XF86Display → XF86Display → XF86MonBrightnessUp` combination provides `light -S 1.0`
+bindsym XF86MonBrightnessUp exec light -T 4
+bindsym XF86MonBrightnessDown exec light -U 3
+
 # bindsym XF86Favorites exec light -S 0
 
 # NOTE: The Mode key might be an ACPI event instead.
 # `thinkpad_acpi: unhandled HKEY event 0x1402`
-
 
 # Print is keycode 99 in `showkey --keycodes`
 # XF86Assistant is key 201 (or... ALL THREE OF 193, 42, 125, in showkey?)
