Review reponse to https://github.com/yuzisee/nixos-config/pull/3#discussion_r2718526471
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/i7-10810U_chatreey/app_courtreserve_com/package.json
+++ b/i7-10810U_chatreey/app_courtreserve_com/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app_courtresrve_com",
+  "name": "app_courtreserve_com",
   "version": "1.0.0",
   "description": "https://app.courtreserve.com/Online/MyProfile/MyClubs/13233 yuzisee+courtreserve https://playwright.dev/docs/intro",
   "main": "index.js",
