fixup! Let's see if Github Actions can run this in the background

--- a/.github/workflows/bookit.yml
+++ b/.github/workflows/bookit.yml
@@ -7,7 +7,7 @@ jobs:
   pickleball:
     runs-on: ubuntu-latest
     # https://docs.github.com/en/actions/how-tos/write-workflows/choose-what-workflows-do/use-secrets#creating-secrets-for-an-environment
-    environment: "Configure Prod (Lifetime Activities Sunnyvale)"
+    environment: "Prod (Lifetime Activities Sunnyvale)"
     steps:
     - name: Checkout repository
       uses: actions/checkout@v5
