Especially if tests fail (and for now https://github.com/yuzisee/nixos-config/blob/cf2437c60c27ab146088c815d79ed5be964d1268/i7-10810U_chatreey/app_courtreserve_com/main/example.spec.ts#L879 will *always* fail, by design)

--- a/.github/workflows/bookit.yml
+++ b/.github/workflows/bookit.yml
@@ -29,6 +29,7 @@ jobs:
         DEV_U: ${{ secrets.LOGIN_DEV }}
         DEV_P: ${{ secrets.DUMMYPW }}
     - name: Upload screenshots if available
+      if: always()
       uses: actions/upload-artifact@v6
       with:
         name: screenshots-playwright
