--- a/.github/workflows/bookit.yml
+++ b/.github/workflows/bookit.yml
@@ -1,6 +1,6 @@
 name: Lifetime Activities
 
-on: 
+on:
   workflow_dispatch:
 
 jobs:
@@ -33,7 +33,9 @@ jobs:
       uses: actions/upload-artifact@v6
       with:
         name: screenshots-playwright
-        path: i7-10810U_chatreey/app_courtreserve_com/*.png
+        path: |
+          i7-10810U_chatreey/app_courtreserve_com/*.png
+          i7-10810U_chatreey/app_courtreserve_com/test-results/example-try-booking-pickleball-chromium/*.png
         overwrite: true
         compression-level: 9
         retention-days: 11
