--- a/.github/workflows/bookit.yml
+++ b/.github/workflows/bookit.yml
@@ -3,8 +3,12 @@ name: Lifetime Activities
 on:
   workflow_dispatch:
   schedule:
-    - cron: "57 11 * * 1"
-    # run on Mondays to book the next Tuesday
+    #           ↓↓ 19 UTC is "11 am Pacific", but during daylight savings we need 18 UTC to be "11 am Pacific" (we'll schedule both and test `$GITHUB_EVENT_NAME` before running, below)
+    #                  ↓ run on Mondays to book the next Tuesday
+    - cron: '51 18 * * 1'
+    - cron: '51 19 * * 1'
+    # Leave 9 minutes just in case `actions/checkout@v5` has some kind of delay or `i7-10810U_chatreey/dev-github/reinstall_playwright.sh` takes longer than expected.
+    # We are charged by the minute, and the free plan has only 2000 minutes per month, so no need to waste an entire hour waiting ← https://docs.github.com/en/get-started/learning-about-github/githubs-plans#github-free-for-personal-accounts
 
 jobs:
   pickleball:
@@ -13,19 +17,40 @@ jobs:
     environment: "Prod (Lifetime Activities Sunnyvale)"
     steps:
     - name: Checkout repository
+      timeout-minutes: 4
       uses: actions/checkout@v5
     - name: Install Playwright
+      timeout-minutes: 4
+      run: sh i7-10810U_chatreey/dev-github/reinstall_playwright.sh
+    - name: Book within 6 hours
+      timeout-minutes: 30
       working-directory: ./i7-10810U_chatreey/app_courtreserve_com
       run: |
-        if sudo -n -k echo 'this is most likely a Github-hosted runner, because I am able to sudo without a password, even after -k invalidates any existing credentials (and by setting STDIN to /dev/null it is impossible to enter another password)' < /dev/null; then
-          npm ci # requires that we already `npm init playwright@1.56.0` at some point
-          npx --no-install playwright install chromium
-        else
-          exit 69 # EX_UNAVAILABLE
-        fi
-    - name: Book within 24hrs
-      working-directory: ./i7-10810U_chatreey/app_courtreserve_com
-      run: npx --no-install playwright test main/example.spec.ts
+        case ${GITHUB_EVENT_NAME} in
+          schedule)
+            # Verify daylight savings
+            if test $(TZ='America/Los_Angeles' date +'%H') '=' '11'; then
+              echo "This is the scheduled time. Let's go"
+            else
+              echo 'Too far from noon. There should be another `on: … schedule: …` cron line above that we can use instead. Aborting this run for now.'
+              # man sysexits
+              exit 75 # EX_TEMPFAIL
+            fi
+          ;;
+          workflow_dispatch)
+            echo 'All good. You triggered manually via the web, so proceed regardless of time zone! However please be aware that there is still a 6 hour limit on a single Github Actions run, itself ← https://docs.github.com/en/actions/reference/limits'
+          ;;
+          ...
+          *)
+            echo 1>&2 'How did you get here? The `on:` section at the top of this file (.github/workflows/bookit.yml) has no entry for ' ${GITHUB_EVENT_NAME}
+            # man sysexits
+            exit 78 # EX_CONFIG
+          ;;
+        esac
+
+        # [INVARIANT] If you get here, we're cleared to proceed. Run booking!!
+
+        npx --no-install playwright test main/example.spec.ts
       env:
         U: ${{ secrets.ANTHONY }}
         P: ${{ secrets.LOGIN_PROD }}
