--- a/.github/workflows/bookit.yml
+++ b/.github/workflows/bookit.yml
@@ -67,6 +67,7 @@ jobs:
         path: |
           i7-10810U_chatreey/app_courtreserve_com/*.png
           i7-10810U_chatreey/app_courtreserve_com/test-results/example-try-booking-pickleball-chromium/*.png
+          i7-10810U_chatreey/app_courtreserve_com/test-results/example-try-booking-pickleball-chromium/*.md
         overwrite: true
         compression-level: 9
         retention-days: 11
