--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -3,6 +3,7 @@ on:
     branches:
       - master
     paths:
+      - .github/workflows/selftest.yml
       - i7-10810U_chatreey/app_courtreserve_com/main
       - i7-10810U_chatreey/app_courtreserve_com/*.json
       - i7-10810U_chatreey/app_courtreserve_com/*.ts
@@ -10,6 +11,7 @@ on:
     types: [synchronize, opened]
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#onpull_requestpull_request_targetbranchesbranches-ignore
     paths:
+      - .github/workflows/selftest.yml
       - i7-10810U_chatreey/app_courtreserve_com/main
       - i7-10810U_chatreey/app_courtreserve_com/*.json
       - i7-10810U_chatreey/app_courtreserve_com/*.ts
