main/example.spec.ts(1,38): error TS2307: Cannot find module '@playwright/test' or its corresponding type declarations.
main/example.spec.ts(24,44): error TS2304: Cannot find name 'Locator'.
main/example.spec.ts(57,37): error TS2304: Cannot find name 'Page'.

* https://www.typescriptlang.org/tsconfig/#moduleResolution
* https://playwright.dev/docs/test-typescript#manually-compile-tests-with-typescript

--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -23,6 +23,17 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v6
+    - name: Install dependencies
+      working-directory: ./i7-10810U_chatreey/app_courtreserve_com
+      run: npm ci
+    - name: "Good?"
+      working-directory: ./i7-10810U_chatreey/app_courtreserve_com
+      run: |
+        cat node_modules/@playwright/test/package.json
+        npx playwright --version
+        ls -l node_modules/@playwright/test/index.d.ts
+        ls node_modules/@playwright/test/types
+        ls -la tsconfig.json node_modules/
     - name: Run tsc
       working-directory: ./i7-10810U_chatreey/app_courtreserve_com
       run: npx tsc --noEmit
