--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -1,7 +1,9 @@
+name: Automated tests for app_courtreserve_com
+
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - .github/workflows/selftest.yml
       - i7-10810U_chatreey/app_courtreserve_com/main
@@ -31,7 +33,7 @@ jobs:
       run: |
         cat node_modules/@playwright/test/package.json
         npx playwright --version
-        ls -l node_modules/@playwright/test/index.d.ts
+        cat node_modules/@playwright/test/index.d.ts
         ls node_modules/@playwright/test/types
         ls -la tsconfig.json node_modules/
     - name: Run tsc
