--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -34,8 +34,13 @@ jobs:
         cat node_modules/@playwright/test/package.json
         npx playwright --version
         cat node_modules/@playwright/test/index.d.ts
-        ls node_modules/@playwright/test/types
         ls -la tsconfig.json node_modules/
+        echo '⋮'
+        cat node_modules/playwright/package.json | grep -A 20 '"exports"'
+        printf '↕ '
+        ls -l node_modules/playwright/package.json
+        cat node_modules/playwright/package.json | grep -A 5 '"./test"'
+        ls node_modules/@playwright/test/types || echo 'Hmm??'
     - name: Run tsc
       working-directory: ./i7-10810U_chatreey/app_courtreserve_com
       run: npx tsc --noEmit
