Review response to https://github.com/yuzisee/nixos-config/pull/8#discussion_r2845058732

--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -40,6 +40,7 @@ jobs:
         printf '↕ '
         ls -l node_modules/playwright/package.json
         cat node_modules/playwright/package.json | grep -A 5 '"./test"'
+        npx tsc --version
         ls node_modules/@playwright/test/types || echo 'Hmm??'
     - name: Run tsc
       working-directory: ./i7-10810U_chatreey/app_courtreserve_com
