--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -27,7 +27,7 @@ jobs:
       uses: actions/checkout@v6
     - name: Install dependencies
       working-directory: ./i7-10810U_chatreey/app_courtreserve_com
-      run: npm ci && npm install --save-dev typescript
+      run: npm ci
     - name: "Good?"
       working-directory: ./i7-10810U_chatreey/app_courtreserve_com
       run: |
@@ -41,6 +41,7 @@ jobs:
         ls -l node_modules/playwright/package.json
         cat node_modules/playwright/package.json | grep -A 5 '"./test"'
         npx --no tsc --version
+        npx tsc --version
         ls node_modules/@playwright/test/types || echo 'Hmm??'
     - name: Run tsc
       working-directory: ./i7-10810U_chatreey/app_courtreserve_com
