error TS5042: Option 'project' cannot be mixed with source files on a command line.

--- a/i7-10810U_chatreey/app_courtreserve_com/tsconfig.json
+++ b/i7-10810U_chatreey/app_courtreserve_com/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "include": ["main/example.spec.ts"], // otherwise we get problems reported in `playwright.config.ts` and stuff which are a bit unnecessary
+
   "compilerOptions": {
     "target": "ES2022",
     "lib": ["ES2022", "DOM"],
